--- a/style.css
+++ b/style.css
@@ -1,78 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
-
-:root {
-    --bg-color: #008B8B;
-    --primary-color: #DB7093;
-    --secondary-color: #DA70D6;
-    --font: "Nunito Sans", sans-serif;
-}
-
+/* Estilos principais para o layout do site */
 body {
-    background-color: var(--bg-color);
-    color: var(--primary-color);
-    font-family: var(--font);
-    height: 100vh;
+    font-family: Arial, sans-serif;
+    background-color: #008B8B; /* Verde água escuro */
+    color: #BC8F8F; /* Bege rosado */
     margin: 0;
+    padding: 0;
 }
 
 header {
-    background-color: var(--primary-color);
+    background-color: #DB7093; /* Rosa avermelhado */
+    padding: 20px;
     text-align: center;
-    padding: 1px;
+    color: white;
 }
 
 h1 {
-    font-size: 2rem;
-    color: var(--bg-color);
-    font-weight: 700;
+    margin: 0;
+    font-size: 2em;
 }
 
-nav {
-    display: flex;
-    justify-content: center;
-    font-weight: 400;
-}
-
-nav a {
-    text-decoration: none;
-    color: var(--bg-color);
-    margin: 0 2rem 1rem 0rem;
-    font-size: 1.2rem;
-}
-
-nav a:hover {
-    text-decoration: underline;
-    transform: scale(0.90);
-    transition: transform 0.1s;
-}
-
-.graficos-container {
-    margin: 5rem;
+#graficos-container {
+    padding: 20px;
 }
 
 .grafico {
-    margin-top: 3rem;
-}
-
-.graficos-container__texto {
-    font-size: 1.3rem;
-    text-align: center;
-    padding: 2rem;
-    border: var(--secondary-color) solid 2px;
-}
-
-span {
-    font-weight: bold;
-    color: var(--secondary-color);
-}
-
-footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--primary-color);
-    color: var(--bg-color);
-    width: 100%;
-    height: 3rem;
-    margin-top: 2rem;
+    margin: 20px 0;
+    background-color: #BC8F8F; /* Fundo bege rosado */
+    padding: 10px;
+    border-radius: 8px;
 }
